kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: "Ingress"
metadata:
  name: "innoventing-apps"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: "innoventing-cert"
  rules:
#    - host: employee.innoventing.net
#      http:
#        paths:
#              - backend:
#        serviceName: employee-service
#        servicePort: 8080
    - host: app.innoventing.net
      http:
        paths:
          - backend:
              serviceName: employee-app-service
              servicePort: 8080
